esercizio (purtroppo) non completato

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main class="main">
         <div id="grid-container">
-            <!-- qui vengono generati i quadrati -->
+            <!-- qui vengono generati i quadrati div classe box -->
         </div>
 
 
